<resources>
    <string name="app_name">My Library</string>
    <string name="register">注册</string>
    <string name="exit">退出</string>
    <string name="user">用户名</string>
    <string name="pwd">密码</string>
    <string name="password">密码</string>
    <string name="password_setting">密码设置</string>
    <string name="repassword">确认密码</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="phone">电话号码</string>
    <string name="nickname">昵称</string>
    <string name="chat">聊天</string>
    <string name="friend">好友</string>
    <string name="dynamic">动态</string>
    <string name="pop_chat">发起聊天</string>
    <string name="pop_create_group">创建群组</string>
    <string name="pop_add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="no_friend">暂无好友</string>
    <string name="new_friends">新的好友</string>
    <string name="group">群组</string>
    <string name="public_service">公众号</string>
    <string name="claim_friends">好友认领</string>
    <string name="enter">确定</string>
    <string name="photograph">拍照</string>
    <string name="local_photo">本地图片</string>
    <string name="cancel">取消</string>
    <string name="call">拨打电话</string>
    <string name="send_sms">发送短信</string>
    <string name="send_email">发送邮件</string>
    <string name="email">邮箱</string>
    <string name="send_message">发送信息</string>
    <string name="personal">个人信息</string>
    <string name="myself">我</string>
    <string name="group_activity_name">群活动名称</string>
    <string name="group_activity_time">群活动时间</string>
    <string name="group_activity_place">群活动地点</string>
    <string name="group_activity_content">群活动内容</string>
    <string name="group_activity_partake">参与人数</string>
    <string name="activity_name">活动名称:</string>
    <string name="time">时间:</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="activity_place">活动地点:</string>
    <string name="place">地点:</string>
    <string name="activity_content">活动内容:</string>
    <string name="activity_member">活动人数:</string>
    <string name="select_start_time">选择开始时间</string>
    <string name="select_end_time">选择结束时间</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="age">年龄</string>
    <string name="actives_limit">活动限制人数</string>
    <string name="address">地址</string>
    <string name="QR_code">二维码</string>
    <string name="delete_friend">删除该好友</string>
    <string name="add_new">新增选项</string>
    <string name="question">认领问题</string>
    <string name="answer">认领答案</string>
    <string name="name">真实姓名</string>
</resources>
