<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >

    <!--<LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

        <Button
            android:id="@+id/btn_photograph"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/photograph" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/local_photo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/cancel" />
    <!--</LinearLayout>-->

</LinearLayout>