<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_group_add_flexible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.min.smalltalk.activity.GroupAddFlexibleActivity">

    <include layout="@layout/layout_title_top" />

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->
    <ImageView
        android:id="@+id/iv_group_activity_head"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/add_group_head" />

    <!--活动名-->
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/activity_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/activity_name" />

        <EditText
            android:id="@+id/et_activity_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--开始时间-->
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/activity_start_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <TextView
            android:drawableRight="@mipmap/rp_arrow"
            android:id="@+id/tv_activity_start_time"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/select_start_time" />
    </LinearLayout>

    <!--结束时间-->
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/activity_end_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/end_time" />

        <TextView
            android:drawableRight="@mipmap/rp_arrow"
            android:id="@+id/tv_activity_end_time"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/select_end_time" />
        </LinearLayout>

    <!--地点-->
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/activity_place"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/activity_place" />

        <EditText
            android:id="@+id/et_activity_place"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"/>
        </LinearLayout>

    <!--</RelativeLayout>-->

    <!--时间选择器-->
    <TextView
        android:id="@+id/tv_select_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <!--活动简介-->
    <TextView
        android:id="@+id/activity_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_content" />

    <EditText
        android:id="@+id/et_activity_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg"
        android:gravity="top"
        android:hint="@string/activity_content"
        android:maxLines="8"
        android:minLines="5"
        android:scrollbars="vertical" />

</LinearLayout>
